--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
 
 .container{
 	width: 100%;
+	background-color: rgb(112,112,112);
 }
 
 .text-bold{
@@ -30,6 +31,7 @@ body{
 }
 
 img{
+	width: 100%;
 	float: left;
 }
 
