--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,65 @@ body{
 	text-align: center;
 }
 
+form {
+	width: 80%;
+	margin: 40px;
+	display: inline-block;
+	background-color: white;
+	box-shadow: 0px 0px 8px 10px rgba(6, 6, 6, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	opacity: 0.7;
+	color: black;
+}
+
+input {
+	width: 80%;
+	height: 40px;
+	text-align: center;
+	background-color: dodgerblue;
+	color: black;
+	border: none;
+}
+
+input:hover {
+	background-color: dodgerblue;
+}
+
+button {
+	width: 80%;
+	height: 40px;
+	text-align: center;
+	background-color: blue;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	margin: 8px;
+	color: white;
+	font-size: 20px
+}
+
+button:hover {
+	background-color: darkgreen;
+}
+
+
 .fa{
 	border-radius: 50px;
     padding: 20px; 
     width: 100px;
     height: 100px; 
-	margin: 30px;
 	border: solid dodgerblue;
 }
 
 .fa:hover{
 	background-color: dodgerblue;
+}
+
+.form-i{
+	padding: 9px;
+	width: 60px;
+    height: 60px;
+	
+	
 }
 
 span{
@@ -24,7 +72,7 @@ span{
 
 .container{
 	width: 100%;
-	background-color: rgb(112,112,112);
+	background-color: dodgerblue;
 }
 
 .text-bold{
@@ -43,6 +91,7 @@ img{
 }
 
 .main-section{
+	text-align: center;
 }
 
 @media only screen and (max-width: 500px) {
