--- a/css/style.css
+++ b/css/style.css
@@ -24,24 +24,19 @@ input {
 }
 
 input:hover {
-	background-color: dodgerblue;
+	background-color: skyblue;
 }
 
 button {
-	width: 80%;
+	width: 40%;
 	height: 40px;
 	text-align: center;
 	background-color: blue;
 	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-	margin: 8px;
-	color: white;
-	font-size: 20px
 }
 
 button:hover {
-	background-color: darkgreen;
+	background-color: blueviolet;
 }
 
 
