--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
 
 p{
 	font-size: 17px;
+	padding: 10px;
 }
 
 form {
@@ -52,6 +53,7 @@ button:hover {
 .fa{
 	border-radius: 50px;
     padding: 20px; 
+	margin: 20px;
     width: 100px;
     height: 100px; 
 	border: solid dodgerblue;
