--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,34 @@ span{
 	height: 350px;
 }
 
+
 .main-section{
 	text-align: center;
 }
 
-@media only screen and (max-width: 500px) {
-.main-section{
-
+@media only screen and (min-width: 500px) {
+	.item{
+		height: 510px;
 }
 	
 }
+
+@media only screen and (min-width: 900px) {
+	
+	img{
+		height: 100;
+	}
+	
+	.carousel-inner{
+		text-align: center;
+		height: 700px;
+	}
+	
+	h1{
+		display: none;
+	}
+
+	}
+	
+
 
